<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Baby_pink"
                android:onClick="botones"
                app:cornerRadius="25dp"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="@string/abtwcr"
                android:textStyle="bold" />

            <Button
                android:id="@+id/intdef"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cornerRadius="25dp"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorAccent"
                android:onClick="botones"
                android:text="@string/btnintdef"
                android:textStyle="bold" />

            <Button
                android:id="@+id/intnum"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                android:backgroundTint="@color/Madder_lake"
                android:onClick="botones"
                android:text="@string/intnum" />

            <Button
                android:id="@+id/abtwc"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                app:cornerRadius="25dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Área entre curvas"
                android:textColorHint="@color/Methalic_Seaweed"
                android:onClick="botones"/>

            <Button
                android:id="@+id/vsrev"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                app:cornerRadius="25dp"
                android:backgroundTint="@color/correctopt"
                android:textStyle="bold"
                android:textSize="20dp"
                android:onClick="botones"
                android:text="@string/vsrev"/>

            <Button
                android:id="@+id/volst"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                app:cornerRadius="25dp"
                android:backgroundTint="@color/pinkf"
                android:textStyle="bold"
                android:textSize="20dp"
                android:onClick="botones"
                android:text="@string/vst"/>

            <Button
                android:id="@+id/longarc"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cornerRadius="25dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Madder_lake"
                android:onClick="botones"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/loarc" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

