<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/txt1"
        android:layout_width="173dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="300dp"
        android:text="@string/qst"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@id/txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name"
        android:layout_width="228dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:drawableStart="@drawable/vector_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Nomb"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="178dp"
        android:gravity="center"
        android:text="@string/Qtitle"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnname"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="166dp"
        android:text="INGRESAR"
        android:textSize="20sp"
        android:onClick="botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</androidx.constraintlayout.widget.ConstraintLayout>